--- a/storeapp/app/src/main/AndroidManifest.xml
+++ b/storeapp/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
         </activity>
         <activity android:name=".BaseActivity" />
         <activity android:name=".MainActivity" />
+        <activity
+            android:name=".Main2Activity"
+            android:label="@string/title_activity_main2" />
     </application>
 
 </manifest>
