--- a/storeapp/app/src/main/AndroidManifest.xml
+++ b/storeapp/app/src/main/AndroidManifest.xml
@@ -19,10 +19,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".BaseActivity" />
-        <activity android:name=".MainActivity" />
         <activity
-            android:name=".Main2Activity"
-            android:label="@string/title_activity_main2" />
+            android:name=".MainActivity"
+            android:label="@string/app_name" />
     </application>
 
 </manifest>
